adding images and style

--- a/index.html
+++ b/index.html
@@ -6,14 +6,27 @@
   <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
+<section>
   <h1> Planets Information </h1>
   <table>
     <tr>
-	<th> Characteristics </th>
-    <th> Mercury </th>
-    <th> Venus </th>
-    <th> Earth </th>
-    <th> Mars </th>
+	<th></th>
+    <th>
+	<img class = "planet" src="images/mercury.png" alt="Mercury">
+	<p> Mercury </p>
+	</th>
+    <th>  
+	<img class = "planet" src="images/venus.jpg" alt="Venus">
+	<p> Venus </p>
+	</th>
+    <th>
+	<img class = "planet" src="images/earth.jpg" alt="Earth">
+	<p> Earth </p>
+	</th>
+    <th> 
+	<img class = "planet" src="images/mars.jpg" alt="Mars">
+	<p> Mars </p>
+	</th>
   </tr>
   <tr>
     <td> Mass (kg) </td>
@@ -65,6 +78,7 @@
      <td>686.98 Earth days in a Year</td>
   </tr>
 </table>
+</section>
  <footer>
     <a href="https://pds.jpl.nasa.gov/planets/special/planets.htm" target="_blank"
     title="Reference">Planet Profiles Source</a>
